<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">O-Timer</string>
    <string name="action_settings">Settings</string>
    <string name="action_set_start_date">Set date started</string>
    <string name="action_set_goal">Set goal</string>

    <string name="days">0</string>
    <string name="unit_days">" days "</string>
    <string name="hours">0</string>
    <string name="unit_hours">" hours "</string>
    <string name="minutes">0</string>
    <string name="unit_minutes">" minutes "</string>
    <string name="seconds">0</string>
    <string name="unit_seconds">" seconds "</string>
    
    <string name="goal_left_1"></string>
    <string name="goal_left">0</string>
    <string name="goal_left_2">" minutes left till goal"</string>

    <string name="button_start_stop">Start / Stop</string>
    <string name="button_new">I couldn\'t help it :(</string>
    
    <string name="set_to_future">Are you from the future?</string>
    <string name="dialog_title">Set date started</string>
    
    <string name="goal_dialog_title">Set goal</string>
    <string name="goal_dialog_hint">Input number of days</string>
    <string name="goal_dialog_ok">OK</string>
    <string name="goal_dialog_cancel">Cancel</string>

    <string name="congratulate_title">Congratulations!!</string>
    <string name="congratulate">You made it! You\'re the man! Keep up the good work!!</string>
    
    <string name="timer_stopped_title">Timer stopped</string>
    
    <string name="reset_title">What!?</string>
    <string name="reset_message">You can do it next time! I have faith in you!!</string>
</resources>
