<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal" >

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_days"
        android:textSize="50sp" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/hours"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hours"
	        android:textSize="20sp" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/unit_hours"
	        android:textSize="20sp" />
	
	    <TextView
	        android:id="@+id/minutes"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/minutes"
	        android:textSize="20sp" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/unit_minutes"
	        android:textSize="20sp" />
	
	    <TextView
	        android:id="@+id/seconds"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/seconds"
	        android:textSize="20sp" />
	
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/unit_seconds"
	        android:textSize="20sp" />
    </TableRow>
    
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TableRow
        android:id="@+id/goal_left_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
	    <TextView
	        android:text="@string/goal_left_1" />
	    <TextView
	        android:id="@+id/goal_left"
	        android:text="@string/goal_left" />
	    <TextView
	        android:text="@string/goal_left_2" />
    </TableRow>

    <Button
        android:id="@+id/button_start_stop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start_stop" />
    
    <Button
        android:id="@+id/button_new"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_new" />
</LinearLayout>